# SDR_libiio_1.x

./: .gitignore  CMakeLists.txt  README.md
ad9361/: ad9361.cpp  ad9361.hpp  ad9361_copy.cpp  ad9361_copy.hpp
doc/: CHANNEL_ESTIMAT.md  FREQ_SYNC.md  INSTALLATION.MD  MULTY_CHANNEL.md  OFDM_CYCLIC_PREFIX.md  OFDM_FORM.md  OFDM_SYMBOL_SYNC.md  Parallel_conv.md  REAL_TIME.md  RX_LTE.md  SIONNA_MIMO.md  libiio_v1.0_sample_rate.md  soapy.md
log_level/: log.cpp  log.hpp
python_visual/: context.py  plot_numpy_file.py  real_rx.py  real_tx.py  res_gride.py  simple_plot.py  time_areol_rx_1sec.py  visual_fft_complex.py
resurs_file/: real_part.txt  rx_imag_1.txt  rx_real_1.txt
src/: main.cpp  run.sh  tx.cpp
src/correlation/: time_corr.cpp  time_corr.hpp
src/freq_offset/: freq_offset.cpp  freq_offset.hpp  test1.cpp
src/test/: run.sh  rx.cpp  trx.cpp  tx.cpp
stream/: iiostream-common.cpp  iiostream-common.hpp  iiostream-common_copy.cpp  iiostream-common_copy.hpp
